# openai

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/chat_extraction/: example.txt
openai/: Cargo.toml
openai/src/: client.rs  lib.rs
openai/src/api/: chat.rs  extraction_prompt.rs  mod.rs
openai/src/core/: mod.rs  response_wrapper.rs
